update: connect guardian portal with database